--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "lucide-react": "^0.552.0",
-        "recharts": "^3.3.0"
+        "recharts": "^3.3.0",
+        "styled-components": "^6.0.0"
     }
 }
